--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "learn how to test",
   "main": "index.js",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.3.0",
+    "babel-preset-env": "^1.7.0",
     "jest": "^26.4.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
