--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^26.3.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/preset-env": "^7.11.5",
     "jest": "^26.4.2"
   },
   "devDependencies": {},
